--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "react3month",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "antd": "^3.8.4",
     "axios": "^0.18.0",
     "immutability-helper": "^2.7.1",
     "react": "^16.4.2",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-form": "^7.4.2",
+    "redux-thunk": "^2.3.0",
+    "validator": "^10.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
