--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.8.4",
     "axios": "^0.18.0",
     "immutability-helper": "^2.7.1",
+    "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.4.2",
